--- a/public/_less/base.less
+++ b/public/_less/base.less
@@ -3,11 +3,17 @@ html{
 	body{
 		.select-no;
 		cursor: default;
+		span{
+			font-family: 'Microsoft YaHei';
+		}
 		.all_main_full{
 			position: absolute;
 			width: 100%;
 			height: 100%;
 			background-color: #000;
+		}
+		ul,li{
+			-webkit-padding-start: 0;
 		}
 		.main_full{
 			position: absolute;
@@ -39,6 +45,9 @@ html{
 				visibility: hidden;
 				display: none;
 				overflow: hidden;
+				background-repeat: no-repeat;
+				background-size: 100% 100%;
+				background-position: center center;
 				backface-visibility: hidden;
 				-webkit-backface-visibility: hidden;
 				-moz-backface-visibility: hidden;
@@ -179,14 +188,6 @@ html{
 						}
 					}
 				}
-				@keyframes pushup{
-					from{
-						margin-top: 30px;
-					}
-					to{
-						margin-top: 0;
-					}
-				}
 			}
 			.line{
 				position: absolute;
@@ -309,7 +310,7 @@ html{
 	}
 
 
-	#page1{
+	#page1,#page2{
 		.img_back{
 			position: absolute;
 			width: 100%;
@@ -319,6 +320,47 @@ html{
 			background-repeat: no-repeat;
 			background-size: auto 100%;
 		}
+		.img_more{
+			position: absolute;
+			width: 180px;
+			height: 57px;
+			opacity: 0;
+			visibility: hidden;
+			top: 55%;
+			cursor: pointer;
+			z-index: 10;
+			left: 50%;
+			margin-left: -90px;
+			animation: showImgA 0.5s 4s linear both;
+			-webkit-animation: showImgA 0.5s 4s linear both;
+			-moz-animation: showImgA 0.5s 4s linear both;
+			-o-animation: showImgA 0.5s 4s linear both;
+		}
+		#pt-ctx1{
+			position: absolute;
+			.centerMain;
+			z-index: 9;
+		}
+		#pt-page1-svg{
+			position: absolute;
+			width: 1024px;
+			height: 768px;
+			.centerMain;
+			.svg-span{
+				position: absolute;
+				z-index: 10;
+			}
+		}
+		.pt_particles{
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			z-index: 9;
+		}
+		.img_show{
+			opacity: 1;
+			visibility: visible;
+		}
 		.img-animate1{
 			animation: showImgA 0s linear both, rotateImgA 100s linear infinite;
 			-webkit-animation: showImgA 0s linear both, rotateImgA 100s linear infinite;
@@ -326,26 +368,21 @@ html{
 			-o-animation: showImgA 0s linear both, rotateImgA 100s linear infinite;
 		}
 		.img-animate2{
-			animation: showImgA 1s 3s linear both, rotateImgB 50s 4s linear infinite;
-			-webkit-animation: showImgA 1s 3s linear both, rotateImgB 50s 4s linear infinite;
-			-moz-animation: showImgA 1s 3s linear both, rotateImgB 50s 4s linear infinite;
-			-o-animation: showImgA 1s 3s linear both, rotateImgB 50s 4s linear infinite;
+			animation: showImgA 1s 2s linear both, rotateImgB 50s 3s linear infinite;
+			-webkit-animation: showImgA 1s 2s linear both, rotateImgB 50s 3s linear infinite;
+			-moz-animation: showImgA 1s 2s linear both, rotateImgB 50s 3s linear infinite;
+			-o-animation: showImgA 1s 2s linear both, rotateImgB 50s 3s linear infinite;
 		}
 		.img-animate3{
-			animation: showImgA 1s 1s linear both, rotateImgC 20s 2s linear infinite;
-			-webkit-animation: showImgA 1s 1s linear both, rotateImgC 20s 2s linear infinite;
-			-moz-animation: showImgA 1s 1s linear both, rotateImgC 20s 2s linear infinite;
-			-o-animation: showImgA 1s 1s linear both, rotateImgC 20s 2s linear infinite;
-		}
-		.img-animate4{
-			animation: showImgA 1s 2s linear both, rotateImgD 30s 3s linear infinite;
-			-webkit-animation: showImgA 1s 2s linear both, rotateImgD 30s 3s linear infinite;
-			-moz-animation: showImgA 1s 2s linear both, rotateImgD 30s 3s linear infinite;
-			-o-animation: showImgA 1s 2s linear both, rotateImgD 30s 3s linear infinite;
+			animation: showImgA 1s 1s linear both, rotateImgD 30s 2s linear infinite;
+			-webkit-animation: showImgA 1s 1s linear both, rotateImgD 30s 2s linear infinite;
+			-moz-animation: showImgA 1s 1s linear both, rotateImgD 30s 2s linear infinite;
+			-o-animation: showImgA 1s 1s linear both, rotateImgD 30s 2s linear infinite;
 		}
 		@keyframes showImgA{
 			to{
 				opacity: 1;
+				visibility: visible;
 			}
 		}
 		@keyframes rotateImgA{
@@ -387,7 +424,278 @@ html{
 			}
 		}
 	}
-	
+	#page2{
+		#pt-page2-svg{
+			position: absolute;
+			width: 1024px;
+			height: 768px;
+			.centerMain;
+		}
+		.banner_origin{
+			position: absolute;
+			display: none;
+			width: 60%;
+			height: 50%;
+			left: 50%;
+			top: 22%;
+			margin-left: -30%;
+			border-radius: 8px;
+			border: 2px solid #1c6182;
+			background-color: rgba(34,103,134,0.2);
+			text-align: center;
+			text-align: -webkit-center;
+			.marginTop15{
+				margin-top: 15%;
+			}
+		}
+		#pt-page2-twice{
+			position: absolute;
+			width: 970px;
+			left: 0;
+			right: 0;
+			margin-left: auto;
+			margin-right: auto;
+			display: none;
+			text-align: center;
+			text-align: -webkit-center;
+			-webkit-padding-start: 0;
+			z-index: 2;
+			top: 40%;
+			ul{
+				-webkit-padding-start: 0;
+			}
+
+			.item{
+				width: 120px;
+				height: 120px;
+				border: 1px solid #d2d7de;
+				display: inline-block;
+				display: -webkit-inline-block;
+				transform: rotateZ(45deg);
+				-webkit-transform: rotateZ(45deg);
+				-moz-transform: rotateZ(45deg);
+				-o-transform: rotateZ(45deg);
+				margin: 0 60px;
+				padding: 5px;
+				float: left;
+				span{
+					width: 110px;
+					height: 110px;
+					display: inline-block;
+					background-repeat: no-repeat;
+					background-size: 70px;
+					background-position: center;
+					transform: rotateZ(-45deg);
+					-webkit-transform: rotateZ(-45deg);
+					-moz-transform: rotateZ(-45deg);
+					-o-transform: rotateZ(-45deg);
+				}
+			}
+			.item:before{
+				position: absolute;
+				content: ' ';
+				width: 0;
+				height: 0;
+				left: 0;
+				right: 0;
+				top: 0;
+				bottom: 0;
+				margin: auto;
+				background-color: #38efff;
+				transition: all 0.3s ease;
+				-webkit-transition: all 0.3s ease;
+				-moz-transition: all 0.3s ease;
+				-o-transition: all 0.3s ease;
+				transform-origin: center;
+				-webkit-transform-origin: center;
+				-moz-transform-origin: center;
+				-o-transform-origin: center;
+			}
+			.item:after{
+				position: absolute;
+				content: ' ';
+				width: 120px;
+				bottom: 0;
+				color: #d2d7de;
+				font-size: 14px;
+				transform: rotate(-45deg);
+				-webkit-transform: rotate(-45deg);
+				-moz-transform: rotate(-45deg);
+				-o-transform: rotate(-45deg);
+				transform-origin: right;
+				-webkit-transform-origin: right;
+				-moz-transform-origin: right;
+				-o-transform-origin: right;
+				margin-left: 16px;
+			}
+			.item:first-child:after{
+				content: 'WEB 设计师';
+			}
+			.item:nth-child(2):after{
+				content: 'UI 设计师';
+			}
+			.item:nth-child(3):after{
+				content: '交互设计师';
+			}
+			.item:nth-child(4):after{
+				content: 'ICON 设计师';
+			}
+			.item:hover:before{
+				width: 108px;
+				height: 108px;
+			}
+			.item:nth-child(1){
+				animation: pushup 0.3s 0s linear both;
+			}
+			.item:nth-child(2){
+				animation: pushup 0.3s 0.1s linear both;
+			}
+			.item:nth-child(3){
+				animation: pushup 0.3s 0.2s linear both;
+			}
+			.item:nth-child(4){
+				animation: pushup 0.3s 0.3s linear both;
+			}
+		}
+		#pt-page2-third{
+			position: absolute;
+			display: none;
+			width: 70%;
+			left: 0;
+			right: 0;
+			top: 20%;
+			margin-left: auto;
+			margin-right: auto;
+			.banner_little{
+				position: absolute;
+				width: 30%;
+				height: 530px;
+				margin-right: 5%;
+				border-radius: 8px;
+				display: inline-block;
+				border: 2px solid #1c6182;
+				background-color: rgba(34,103,134,0.2);
+				text-align: center;
+				text-align: -webkit-center;
+				span.text{
+					margin-top: 440px;
+					font-size: 12px;
+					label{
+						font-weight: bold;
+						font-size: 16px;
+					}
+				}
+			}
+			.banner_little:nth-child(2){
+				left: 35%;
+			}
+			.banner_little:nth-child(3){
+				left: 70%;
+			}
+		}
+		span.top-left{
+			position: absolute;
+			width: 30px;
+			height: 30px;
+			border-style: solid;
+			border-width: 3px;
+			border-top-left-radius: 8px;
+			left: 0;
+			margin-left: -2px;
+			margin-top: -2px;
+			border-color: #2ededb transparent transparent #2ededb;
+		}
+		span.top-right{
+			position: absolute;
+			width: 30px;
+			height: 30px;
+			border-style: solid;
+			border-width: 3px;
+			border-top-right-radius: 8px;
+			right: 0;
+			margin-right: -2px;
+			margin-top: -2px;
+			border-color: #2ededb #2ededb transparent transparent;
+		}
+		span.bottom-left{
+			position: absolute;
+			left: 0;
+			bottom: 0;
+			width: 30px;
+			height: 30px;
+			border-style: solid;
+			border-width: 3px;
+			border-bottom-left-radius: 8px;
+			border-color: transparent transparent #2ededb #2ededb;
+			margin-left: -2px;
+			margin-bottom: -2px;
+		}
+		span.bottom-right{
+			position: absolute;
+			right: 0;
+			bottom: 0;
+			width: 30px;
+			height: 30px;
+			border-style: solid;
+			border-width: 3px;
+			border-bottom-right-radius: 8px;
+			border-color: transparent #2ededb #2ededb transparent;
+			margin-right: -2px;
+			margin-bottom: -2px;
+		}
+		span.text{
+			display: block;
+			font-size: 12px;
+			color: #ebedef;
+			line-height: 26px;
+			margin-left: 45px;
+			margin-right: 45px;
+		}
+	}
+	#page4{
+		.text_express{
+			position: absolute;
+			width: 100%;
+			padding: 10px;
+			left: 0;
+			right: 0;
+			margin-left: auto;
+			margin-right: auto;
+			top: 25%;
+			text-align: center;
+			text-align: -webkit-center;
+			span{
+				display: block;
+				color: #c6ccd4;
+				font-size: 12px;
+			}
+		}
+	}
+	.aboutMe{
+		position: absolute;
+		width: 180px;
+		height: 40px;
+		left: 50%;
+		top: 15%;
+		margin-left: -90px;
+		text-align: center;
+		text-align: -webkit-center;
+		span{
+			font-size: 16px;
+			color: #d5d8dc;
+		}
+		span:after{
+			position: absolute;
+			content: ' ';
+			width: 60px;
+			border-top: 1px solid #52e4fe;
+			bottom: 0;
+			margin-left: auto;
+			margin-right: auto;
+			left: 0;
+			right: 0;
+		}
+	}
 }
 .select-no{
 	user-select: none;
@@ -396,4 +704,19 @@ html{
 	-o-user-select: none;
 	-ms-user-select: none;
 	-khtml-user-select: none;
+}
+.centerMain{
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	margin: auto;
+}
+@keyframes pushup{
+	from{
+		margin-top: 30px;
+	}
+	to{
+		margin-top: 0;
+	}
 }
