--- a/public/css/base.css
+++ b/public/css/base.css
@@ -10,11 +10,18 @@ html body {
   -khtml-user-select: none;
   cursor: default;
 }
+html body span {
+  font-family: 'Microsoft YaHei';
+}
 html body .all_main_full {
   position: absolute;
   width: 100%;
   height: 100%;
   background-color: #000;
+}
+html body ul,
+html body li {
+  -webkit-padding-start: 0;
 }
 html body .main_full {
   position: absolute;
@@ -46,6 +53,9 @@ html body .container .section {
   visibility: hidden;
   display: none;
   overflow: hidden;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-position: center center;
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
@@ -193,14 +203,6 @@ html body .pt-page-black .main .item.active a i,
 html body .pt-page-black .main .item.active a span {
   color: #58f1ff;
 }
-@keyframes pushup {
-  from {
-    margin-top: 30px;
-  }
-  to {
-    margin-top: 0;
-  }
-}
 html body .pt-page-black .line {
   position: absolute;
   display: inline-block;
@@ -319,7 +321,8 @@ html .bottom-left-resume span:last-child {
   font-size: 12px;
   display: block;
 }
-html #page1 .img_back {
+html #page1 .img_back,
+html #page2 .img_back {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -328,33 +331,86 @@ html #page1 .img_back {
   background-repeat: no-repeat;
   background-size: auto 100%;
 }
-html #page1 .img-animate1 {
+html #page1 .img_more,
+html #page2 .img_more {
+  position: absolute;
+  width: 180px;
+  height: 57px;
+  opacity: 0;
+  visibility: hidden;
+  top: 55%;
+  cursor: pointer;
+  z-index: 10;
+  left: 50%;
+  margin-left: -90px;
+  animation: showImgA 0.5s 4s linear both;
+  -webkit-animation: showImgA 0.5s 4s linear both;
+  -moz-animation: showImgA 0.5s 4s linear both;
+  -o-animation: showImgA 0.5s 4s linear both;
+}
+html #page1 #pt-ctx1,
+html #page2 #pt-ctx1 {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  z-index: 9;
+}
+html #page1 #pt-page1-svg,
+html #page2 #pt-page1-svg {
+  position: absolute;
+  width: 1024px;
+  height: 768px;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
+html #page1 #pt-page1-svg .svg-span,
+html #page2 #pt-page1-svg .svg-span {
+  position: absolute;
+  z-index: 10;
+}
+html #page1 .pt_particles,
+html #page2 .pt_particles {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 9;
+}
+html #page1 .img_show,
+html #page2 .img_show {
+  opacity: 1;
+  visibility: visible;
+}
+html #page1 .img-animate1,
+html #page2 .img-animate1 {
   animation: showImgA 0s linear both, rotateImgA 100s linear infinite;
   -webkit-animation: showImgA 0s linear both, rotateImgA 100s linear infinite;
   -moz-animation: showImgA 0s linear both, rotateImgA 100s linear infinite;
   -o-animation: showImgA 0s linear both, rotateImgA 100s linear infinite;
 }
-html #page1 .img-animate2 {
-  animation: showImgA 1s 3s linear both, rotateImgB 50s 4s linear infinite;
-  -webkit-animation: showImgA 1s 3s linear both, rotateImgB 50s 4s linear infinite;
-  -moz-animation: showImgA 1s 3s linear both, rotateImgB 50s 4s linear infinite;
-  -o-animation: showImgA 1s 3s linear both, rotateImgB 50s 4s linear infinite;
+html #page1 .img-animate2,
+html #page2 .img-animate2 {
+  animation: showImgA 1s 2s linear both, rotateImgB 50s 3s linear infinite;
+  -webkit-animation: showImgA 1s 2s linear both, rotateImgB 50s 3s linear infinite;
+  -moz-animation: showImgA 1s 2s linear both, rotateImgB 50s 3s linear infinite;
+  -o-animation: showImgA 1s 2s linear both, rotateImgB 50s 3s linear infinite;
 }
-html #page1 .img-animate3 {
-  animation: showImgA 1s 1s linear both, rotateImgC 20s 2s linear infinite;
-  -webkit-animation: showImgA 1s 1s linear both, rotateImgC 20s 2s linear infinite;
-  -moz-animation: showImgA 1s 1s linear both, rotateImgC 20s 2s linear infinite;
-  -o-animation: showImgA 1s 1s linear both, rotateImgC 20s 2s linear infinite;
-}
-html #page1 .img-animate4 {
-  animation: showImgA 1s 2s linear both, rotateImgD 30s 3s linear infinite;
-  -webkit-animation: showImgA 1s 2s linear both, rotateImgD 30s 3s linear infinite;
-  -moz-animation: showImgA 1s 2s linear both, rotateImgD 30s 3s linear infinite;
-  -o-animation: showImgA 1s 2s linear both, rotateImgD 30s 3s linear infinite;
+html #page1 .img-animate3,
+html #page2 .img-animate3 {
+  animation: showImgA 1s 1s linear both, rotateImgD 30s 2s linear infinite;
+  -webkit-animation: showImgA 1s 1s linear both, rotateImgD 30s 2s linear infinite;
+  -moz-animation: showImgA 1s 1s linear both, rotateImgD 30s 2s linear infinite;
+  -o-animation: showImgA 1s 1s linear both, rotateImgD 30s 2s linear infinite;
 }
 @keyframes showImgA {
   to {
     opacity: 1;
+    visibility: visible;
   }
 }
 @keyframes rotateImgA {
@@ -395,6 +451,277 @@ html #page1 .img-animate4 {
     -o-transform: rotate(360deg);
   }
 }
+html #page2 #pt-page2-svg {
+  position: absolute;
+  width: 1024px;
+  height: 768px;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
+html #page2 .banner_origin {
+  position: absolute;
+  display: none;
+  width: 60%;
+  height: 50%;
+  left: 50%;
+  top: 22%;
+  margin-left: -30%;
+  border-radius: 8px;
+  border: 2px solid #1c6182;
+  background-color: rgba(34, 103, 134, 0.2);
+  text-align: center;
+  text-align: -webkit-center;
+}
+html #page2 .banner_origin .marginTop15 {
+  margin-top: 15%;
+}
+html #page2 #pt-page2-twice {
+  position: absolute;
+  width: 970px;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  display: none;
+  text-align: center;
+  text-align: -webkit-center;
+  -webkit-padding-start: 0;
+  z-index: 2;
+  top: 40%;
+}
+html #page2 #pt-page2-twice ul {
+  -webkit-padding-start: 0;
+}
+html #page2 #pt-page2-twice .item {
+  width: 120px;
+  height: 120px;
+  border: 1px solid #d2d7de;
+  display: inline-block;
+  display: -webkit-inline-block;
+  transform: rotateZ(45deg);
+  -webkit-transform: rotateZ(45deg);
+  -moz-transform: rotateZ(45deg);
+  -o-transform: rotateZ(45deg);
+  margin: 0 60px;
+  padding: 5px;
+  float: left;
+}
+html #page2 #pt-page2-twice .item span {
+  width: 110px;
+  height: 110px;
+  display: inline-block;
+  background-repeat: no-repeat;
+  background-size: 70px;
+  background-position: center;
+  transform: rotateZ(-45deg);
+  -webkit-transform: rotateZ(-45deg);
+  -moz-transform: rotateZ(-45deg);
+  -o-transform: rotateZ(-45deg);
+}
+html #page2 #pt-page2-twice .item:before {
+  position: absolute;
+  content: ' ';
+  width: 0;
+  height: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  background-color: #38efff;
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transform-origin: center;
+  -webkit-transform-origin: center;
+  -moz-transform-origin: center;
+  -o-transform-origin: center;
+}
+html #page2 #pt-page2-twice .item:after {
+  position: absolute;
+  content: ' ';
+  width: 120px;
+  bottom: 0;
+  color: #d2d7de;
+  font-size: 14px;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform-origin: right;
+  -webkit-transform-origin: right;
+  -moz-transform-origin: right;
+  -o-transform-origin: right;
+  margin-left: 16px;
+}
+html #page2 #pt-page2-twice .item:first-child:after {
+  content: 'WEB 设计师';
+}
+html #page2 #pt-page2-twice .item:nth-child(2):after {
+  content: 'UI 设计师';
+}
+html #page2 #pt-page2-twice .item:nth-child(3):after {
+  content: '交互设计师';
+}
+html #page2 #pt-page2-twice .item:nth-child(4):after {
+  content: 'ICON 设计师';
+}
+html #page2 #pt-page2-twice .item:hover:before {
+  width: 108px;
+  height: 108px;
+}
+html #page2 #pt-page2-twice .item:nth-child(1) {
+  animation: pushup 0.3s 0s linear both;
+}
+html #page2 #pt-page2-twice .item:nth-child(2) {
+  animation: pushup 0.3s 0.1s linear both;
+}
+html #page2 #pt-page2-twice .item:nth-child(3) {
+  animation: pushup 0.3s 0.2s linear both;
+}
+html #page2 #pt-page2-twice .item:nth-child(4) {
+  animation: pushup 0.3s 0.3s linear both;
+}
+html #page2 #pt-page2-third {
+  position: absolute;
+  display: none;
+  width: 70%;
+  left: 0;
+  right: 0;
+  top: 20%;
+  margin-left: auto;
+  margin-right: auto;
+}
+html #page2 #pt-page2-third .banner_little {
+  position: absolute;
+  width: 30%;
+  height: 530px;
+  margin-right: 5%;
+  border-radius: 8px;
+  display: inline-block;
+  border: 2px solid #1c6182;
+  background-color: rgba(34, 103, 134, 0.2);
+  text-align: center;
+  text-align: -webkit-center;
+}
+html #page2 #pt-page2-third .banner_little span.text {
+  margin-top: 440px;
+  font-size: 12px;
+}
+html #page2 #pt-page2-third .banner_little span.text label {
+  font-weight: bold;
+  font-size: 16px;
+}
+html #page2 #pt-page2-third .banner_little:nth-child(2) {
+  left: 35%;
+}
+html #page2 #pt-page2-third .banner_little:nth-child(3) {
+  left: 70%;
+}
+html #page2 span.top-left {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  border-style: solid;
+  border-width: 3px;
+  border-top-left-radius: 8px;
+  left: 0;
+  margin-left: -2px;
+  margin-top: -2px;
+  border-color: #2ededb transparent transparent #2ededb;
+}
+html #page2 span.top-right {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  border-style: solid;
+  border-width: 3px;
+  border-top-right-radius: 8px;
+  right: 0;
+  margin-right: -2px;
+  margin-top: -2px;
+  border-color: #2ededb #2ededb transparent transparent;
+}
+html #page2 span.bottom-left {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 30px;
+  height: 30px;
+  border-style: solid;
+  border-width: 3px;
+  border-bottom-left-radius: 8px;
+  border-color: transparent transparent #2ededb #2ededb;
+  margin-left: -2px;
+  margin-bottom: -2px;
+}
+html #page2 span.bottom-right {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 30px;
+  height: 30px;
+  border-style: solid;
+  border-width: 3px;
+  border-bottom-right-radius: 8px;
+  border-color: transparent #2ededb #2ededb transparent;
+  margin-right: -2px;
+  margin-bottom: -2px;
+}
+html #page2 span.text {
+  display: block;
+  font-size: 12px;
+  color: #ebedef;
+  line-height: 26px;
+  margin-left: 45px;
+  margin-right: 45px;
+}
+html #page4 .text_express {
+  position: absolute;
+  width: 100%;
+  padding: 10px;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  top: 25%;
+  text-align: center;
+  text-align: -webkit-center;
+}
+html #page4 .text_express span {
+  display: block;
+  color: #c6ccd4;
+  font-size: 12px;
+}
+html .aboutMe {
+  position: absolute;
+  width: 180px;
+  height: 40px;
+  left: 50%;
+  top: 15%;
+  margin-left: -90px;
+  text-align: center;
+  text-align: -webkit-center;
+}
+html .aboutMe span {
+  font-size: 16px;
+  color: #d5d8dc;
+}
+html .aboutMe span:after {
+  position: absolute;
+  content: ' ';
+  width: 60px;
+  border-top: 1px solid #52e4fe;
+  bottom: 0;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+}
 .select-no {
   user-select: none;
   -webkit-user-select: none;
@@ -402,4 +729,19 @@ html #page1 .img-animate4 {
   -o-user-select: none;
   -ms-user-select: none;
   -khtml-user-select: none;
+}
+.centerMain {
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
+@keyframes pushup {
+  from {
+    margin-top: 30px;
+  }
+  to {
+    margin-top: 0;
+  }
 }
